[tool.poetry]
name = "dogestringsessionrepl"
version = "0.1.0"
description = ""
authors = ["DogeUserBot <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
DogeStringSession = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
